src/main/java/org/apache/sysml/parser/dml/DmlParser.java
// Generated from org/apache/sysml/parser/dml/Dml.g4 by ANTLR 4.3
package org.apache.sysml.parser.dml;

	// Commenting the package name and explicitly passing it in build.xml to maintain compatibility with maven plugin
    // package org.apache.sysml.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__55=1, T__54=2, T__53=3, T__52=4, T__51=5, T__50=6, T__49=7, T__48=8, 
		T__47=9, T__46=10, T__45=11, T__44=12, T__43=13, T__42=14, T__41=15, T__40=16, 
		T__39=17, T__38=18, T__37=19, T__36=20, T__35=21, T__34=22, T__33=23, 
		T__32=24, T__31=25, T__30=26, T__29=27, T__28=28, T__27=29, T__26=30, 
		T__25=31, T__24=32, T__23=33, T__22=34, T__21=35, T__20=36, T__19=37, 
		T__18=38, T__17=39, T__16=40, T__15=41, T__14=42, T__13=43, T__12=44, 
		T__11=45, T__10=46, T__9=47, T__8=48, T__7=49, T__6=50, T__5=51, T__4=52, 
		T__3=53, T__2=54, T__1=55, T__0=56, ID=57, INT=58, DOUBLE=59, DIGIT=60, 
		ALPHABET=61, COMMANDLINE_NAMED_ID=62, COMMANDLINE_POSITION_ID=63, STRING=64, 
		LINE_COMMENT=65, MULTILINE_BLOCK_COMMENT=66, WHITESPACE=67;
	public static final String[] tokenNames = {
		"<INVALID>", "'!='", "'while'", "'{'", "'&&'", "'='", "'^'", "'for'", 
		"'int'", "'('", "','", "'<-'", "'boolean'", "'FALSE'", "'>='", "'String'", 
		"'<'", "']'", "'ifdef'", "'function'", "'%/%'", "'+'", "'TRUE'", "'/'", 
		"'as'", "'integer'", "'return'", "'||'", "';'", "'Double'", "'Integer'", 
		"'}'", "'if'", "'source'", "'<='", "'double'", "'setwd'", "'&'", "'*'", 
		"'implemented'", "'Boolean'", "'parfor'", "'%*%'", "'Int'", "':'", "'['", 
		"'|'", "'=='", "'%%'", "'>'", "'externalFunction'", "'!'", "'string'", 
		"'in'", "'else'", "')'", "'-'", "ID", "INT", "DOUBLE", "DIGIT", "ALPHABET", 
		"COMMANDLINE_NAMED_ID", "COMMANDLINE_POSITION_ID", "STRING", "LINE_COMMENT", 
		"MULTILINE_BLOCK_COMMENT", "WHITESPACE"
	};
	public static final int
		RULE_dmlprogram = 0, RULE_statement = 1, RULE_iterablePredicate = 2, RULE_functionStatement = 3, 
		RULE_dataIdentifier = 4, RULE_expression = 5, RULE_typedArgNoAssign = 6, 
		RULE_parameterizedExpression = 7, RULE_strictParameterizedExpression = 8, 
		RULE_strictParameterizedKeyValueString = 9, RULE_ml_type = 10, RULE_valueType = 11, 
		RULE_dataType = 12;
	public static final String[] ruleNames = {
		"dmlprogram", "statement", "iterablePredicate", "functionStatement", "dataIdentifier", 
		"expression", "typedArgNoAssign", "parameterizedExpression", "strictParameterizedExpression", 
		"strictParameterizedKeyValueString", "ml_type", "valueType", "dataType"
	};

	@Override
	public String getGrammarFileName() { return "Dml.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DmlprogramContext extends ParserRuleContext {
		public StatementContext statement;
		public List<StatementContext> blocks = new ArrayList<StatementContext>();
		public FunctionStatementContext functionStatement;
		public List<FunctionStatementContext> functionBlocks = new ArrayList<FunctionStatementContext>();
		public FunctionStatementContext functionStatement(int i) {
			return getRuleContext(FunctionStatementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(DmlParser.EOF, 0); }
		public List<FunctionStatementContext> functionStatement() {
			return getRuleContexts(FunctionStatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public DmlprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlprogram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterDmlprogram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitDmlprogram(this);
		}
	}

	public final DmlprogramContext dmlprogram() throws RecognitionException {
		DmlprogramContext _localctx = new DmlprogramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dmlprogram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__54) | (1L << T__49) | (1L << T__24) | (1L << T__23) | (1L << T__20) | (1L << T__15) | (1L << T__11) | (1L << ID) | (1L << COMMANDLINE_NAMED_ID) | (1L << COMMANDLINE_POSITION_ID))) != 0)) {
				{
				setState(28);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(26); ((DmlprogramContext)_localctx).statement = statement();
					((DmlprogramContext)_localctx).blocks.add(((DmlprogramContext)_localctx).statement);
					}
					break;

				case 2:
					{
					setState(27); ((DmlprogramContext)_localctx).functionStatement = functionStatement();
					((DmlprogramContext)_localctx).functionBlocks.add(((DmlprogramContext)_localctx).functionStatement);
					}
					break;
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(33); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementInfo info;
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
			this.info = ctx.info;
		}
	}
	public static class IfStatementContext extends StatementContext {
		public ExpressionContext predicate;
		public StatementContext statement;
		public List<StatementContext> ifBody = new ArrayList<StatementContext>();
		public List<StatementContext> elseBody = new ArrayList<StatementContext>();
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IfStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitIfStatement(this);
		}
	}
	public static class AssignmentStatementContext extends StatementContext {
		public DataIdentifierContext dataIdentifier;
		public List<DataIdentifierContext> targetList = new ArrayList<DataIdentifierContext>();
		public Token op;
		public ExpressionContext source;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DataIdentifierContext dataIdentifier() {
			return getRuleContext(DataIdentifierContext.class,0);
		}
		public AssignmentStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitAssignmentStatement(this);
		}
	}
	public static class FunctionCallMultiAssignmentStatementContext extends StatementContext {
		public DataIdentifierContext dataIdentifier;
		public List<DataIdentifierContext> targetList = new ArrayList<DataIdentifierContext>();
		public Token name;
		public ParameterizedExpressionContext parameterizedExpression;
		public List<ParameterizedExpressionContext> paramExprs = new ArrayList<ParameterizedExpressionContext>();
		public TerminalNode ID() { return getToken(DmlParser.ID, 0); }
		public ParameterizedExpressionContext parameterizedExpression(int i) {
			return getRuleContext(ParameterizedExpressionContext.class,i);
		}
		public DataIdentifierContext dataIdentifier(int i) {
			return getRuleContext(DataIdentifierContext.class,i);
		}
		public List<DataIdentifierContext> dataIdentifier() {
			return getRuleContexts(DataIdentifierContext.class);
		}
		public List<ParameterizedExpressionContext> parameterizedExpression() {
			return getRuleContexts(ParameterizedExpressionContext.class);
		}
		public FunctionCallMultiAssignmentStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterFunctionCallMultiAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitFunctionCallMultiAssignmentStatement(this);
		}
	}
	public static class IfdefAssignmentStatementContext extends StatementContext {
		public DataIdentifierContext dataIdentifier;
		public List<DataIdentifierContext> targetList = new ArrayList<DataIdentifierContext>();
		public Token op;
		public DataIdentifierContext commandLineParam;
		public ExpressionContext source;
		public DataIdentifierContext dataIdentifier(int i) {
			return getRuleContext(DataIdentifierContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<DataIdentifierContext> dataIdentifier() {
			return getRuleContexts(DataIdentifierContext.class);
		}
		public IfdefAssignmentStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterIfdefAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitIfdefAssignmentStatement(this);
		}
	}
	public static class ParForStatementContext extends StatementContext {
		public Token iterVar;
		public IterablePredicateContext iterPred;
		public StrictParameterizedExpressionContext strictParameterizedExpression;
		public List<StrictParameterizedExpressionContext> parForParams = new ArrayList<StrictParameterizedExpressionContext>();
		public StatementContext statement;
		public List<StatementContext> body = new ArrayList<StatementContext>();
		public IterablePredicateContext iterablePredicate() {
			return getRuleContext(IterablePredicateContext.class,0);
		}
		public List<StrictParameterizedExpressionContext> strictParameterizedExpression() {
			return getRuleContexts(StrictParameterizedExpressionContext.class);
		}
		public TerminalNode ID() { return getToken(DmlParser.ID, 0); }
		public StrictParameterizedExpressionContext strictParameterizedExpression(int i) {
			return getRuleContext(StrictParameterizedExpressionContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ParForStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterParForStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitParForStatement(this);
		}
	}
	public static class ImportStatementContext extends StatementContext {
		public Token filePath;
		public Token namespace;
		public TerminalNode ID() { return getToken(DmlParser.ID, 0); }
		public TerminalNode STRING() { return getToken(DmlParser.STRING, 0); }
		public ImportStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitImportStatement(this);
		}
	}
	public static class PathStatementContext extends StatementContext {
		public Token pathValue;
		public TerminalNode STRING() { return getToken(DmlParser.STRING, 0); }
		public PathStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterPathStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitPathStatement(this);
		}
	}
	public static class WhileStatementContext extends StatementContext {
		public ExpressionContext predicate;
		public StatementContext statement;
		public List<StatementContext> body = new ArrayList<StatementContext>();
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public WhileStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterWhileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitWhileStatement(this);
		}
	}
	public static class ForStatementContext extends StatementContext {
		public Token iterVar;
		public IterablePredicateContext iterPred;
		public StrictParameterizedExpressionContext strictParameterizedExpression;
		public List<StrictParameterizedExpressionContext> parForParams = new ArrayList<StrictParameterizedExpressionContext>();
		public StatementContext statement;
		public List<StatementContext> body = new ArrayList<StatementContext>();
		public IterablePredicateContext iterablePredicate() {
			return getRuleContext(IterablePredicateContext.class,0);
		}
		public List<StrictParameterizedExpressionContext> strictParameterizedExpression() {
			return getRuleContexts(StrictParameterizedExpressionContext.class);
		}
		public TerminalNode ID() { return getToken(DmlParser.ID, 0); }
		public StrictParameterizedExpressionContext strictParameterizedExpression(int i) {
			return getRuleContext(StrictParameterizedExpressionContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ForStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterForStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitForStatement(this);
		}
	}
	public static class FunctionCallAssignmentStatementContext extends StatementContext {
		public DataIdentifierContext dataIdentifier;
		public List<DataIdentifierContext> targetList = new ArrayList<DataIdentifierContext>();
		public Token name;
		public ParameterizedExpressionContext parameterizedExpression;
		public List<ParameterizedExpressionContext> paramExprs = new ArrayList<ParameterizedExpressionContext>();
		public TerminalNode ID() { return getToken(DmlParser.ID, 0); }
		public ParameterizedExpressionContext parameterizedExpression(int i) {
			return getRuleContext(ParameterizedExpressionContext.class,i);
		}
		public DataIdentifierContext dataIdentifier() {
			return getRuleContext(DataIdentifierContext.class,0);
		}
		public List<ParameterizedExpressionContext> parameterizedExpression() {
			return getRuleContexts(ParameterizedExpressionContext.class);
		}
		public FunctionCallAssignmentStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).enterFunctionCallAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmlListener ) ((DmlListener)listener).exitFunctionCallAssignmentStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);

		       // This actions occurs regardless of how many alternatives in this rule
		       ((StatementContext)_localctx).info =  new StatementInfo();

		int _la;
		try {
			int _alt;
			setState(286);
			switch ( getInterpreter().adaptivePredict(_input,37,_ctx) ) {
			case 1:
				_localctx = new ImportStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(35); match(T__23);
				setState(36); match(T__47);
				setState(37); ((ImportStatementContext)_localctx).filePath = match(STRING);
				setState(38); match(T__1);
				setState(39); match(T__32);
				setState(40); ((ImportStatementContext)_localctx).namespace = match(ID);
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(41); match(T__28);
						}
						} 
					}
					setState(46);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;

			case 2:
				_localctx = new PathStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(47); match(T__20);
				setState(48); match(T__47);
				setState(49); ((PathStatementContext)_localctx).pathValue = match(STRING);
				setState(50); match(T__1);
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(51); match(T__28);
						}
						} 
					}
					setState(56);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;

			case 3:
				_localctx = new FunctionCallAssignmentStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(57); ((FunctionCallAssignmentStatementContext)_localctx).dataIdentifier = dataIdentifier();
					((FunctionCallAssignmentStatementContext)_localctx).targetList.add(((FunctionCallAssignmentStatementContext)_localctx).dataIdentifier);
					setState(58);
					_la = _input.LA(1);
					if ( !(_la==T__51 || _la==T__45) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					break;
				}
				setState(62); ((FunctionCallAssignmentStatementContext)_localctx).name = match(ID);
				setState(63); match(T__47);
				setState(72);
				_la = _input.LA(1);
				if (((((_la - 9)) & ~0x3f) == 0 && ((1L << (_la - 9)) & ((1L << (T__47 - 9)) | (1L << (T__43 - 9)) | (1L << (T__35 - 9)) | (1L << (T__34 - 9)) | (1L << (T__5 - 9)) | (1L << (T__0 - 9)) | (1L << (ID - 9)) | (1L << (INT - 9)) | (1L << (DOUBLE - 9)) | (1L << (COMMANDLINE_NAMED_ID - 9)) | (1L << (COMMANDLINE_POSITION_ID - 9)) | (1L << (STRING - 9)))) != 0)) {
					{
					setState(64); ((FunctionCallAssignmentStatementContext)_localctx).parameterizedExpression = parameterizedExpression();
					((FunctionCallAssignmentStatementContext)_localctx).paramExprs.add(((FunctionCallAssignmentStatementContext)_localctx).parameterizedExpression);
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__46) {
						{
						{
						setState(65); match(T__46);
						setState(66); ((FunctionCallAssignmentStatementContext)_localctx).parameterizedExpression = parameterizedExpression();
						((FunctionCallAssignmentStatementContext)_localctx).paramExprs.add(((FunctionCallAssignmentStatementContext)_localctx).parameterizedExpression);
						}
						}
						setState(71);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(74); match(T__1);
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(75); match(T__28);
						}
						} 
					}
					setState(80);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
